parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    F128
    F32
    F64
    I128
    I16
    I32
    I64
    I8
    IMPORT
    LANGLE
    RANGLE
    STRING
    U128
    U16
    U32
    U64
    U8
    UNION

Grammar

Rule 0     S' -> symbol_list
Rule 1     symbol_list -> symbol_list symbol
Rule 2     symbol_list -> symbol
Rule 3     symbol -> struct_decl
Rule 4     symbol -> enum_decl
Rule 5     symbol -> fn_decl
Rule 6     symbol -> default_decl
Rule 7     symbol -> impl_decl
Rule 8     struct_decl -> STRUCT IDENT LBRACE field_list RBRACE
Rule 9     enum_decl -> ENUM IDENT LBRACE variant_list RBRACE
Rule 10    variant_list -> variant_list variant
Rule 11    variant_list -> variant
Rule 12    variant -> IDENT
Rule 13    fn_decl -> FN IDENT LPAREN RPAREN RARROW IDENT LBRACE stmnt_list RBRACE
Rule 14    fn_decl -> FN IDENT LPAREN RPAREN LBRACE stmnt_list RBRACE
Rule 15    default_decl -> DEFAULT IDENT LBRACE RBRACE
Rule 16    impl_decl -> IMPL IDENT LBRACE RBRACE
Rule 17    stmnt_list -> stmnt_list stmnt
Rule 18    stmnt_list -> stmnt
Rule 19    stmnt -> abs_expr
Rule 20    stmnt -> jump_expr
Rule 21    abs_expr -> literal SEMI
Rule 22    abs_expr -> IDENT ASSIGN IDENT SEMI
Rule 23    abs_expr -> IDENT ASSIGN literal SEMI
Rule 24    jump_expr -> RETURN abs_expr SEMI
Rule 25    literal -> UINT
Rule 26    field_list -> field_list field
Rule 27    field_list -> field
Rule 28    field -> IDENT COLON IDENT COMMA

Terminals, with rules where they appear

ASSIGN               : 22 23
COLON                : 28
COMMA                : 28
DEFAULT              : 15
ENUM                 : 9
F128                 : 
F32                  : 
F64                  : 
FN                   : 13 14
I128                 : 
I16                  : 
I32                  : 
I64                  : 
I8                   : 
IDENT                : 8 9 12 13 13 14 15 16 22 22 23 28 28
IMPL                 : 16
IMPORT               : 
LANGLE               : 
LBRACE               : 8 9 13 14 15 16
LPAREN               : 13 14
RANGLE               : 
RARROW               : 13
RBRACE               : 8 9 13 14 15 16
RETURN               : 24
RPAREN               : 13 14
SEMI                 : 21 22 23 24
STRING               : 
STRUCT               : 8
U128                 : 
U16                  : 
U32                  : 
U64                  : 
U8                   : 
UINT                 : 25
UNION                : 
error                : 

Nonterminals, with rules where they appear

abs_expr             : 19 24
default_decl         : 6
enum_decl            : 4
field                : 26 27
field_list           : 8 26
fn_decl              : 5
impl_decl            : 7
jump_expr            : 20
literal              : 21 23
stmnt                : 17 18
stmnt_list           : 13 14 17
struct_decl          : 3
symbol               : 1 2
symbol_list          : 1 0
variant              : 10 11
variant_list         : 9 10

Parsing method: LALR

state 0

    (0) S' -> . symbol_list
    (1) symbol_list -> . symbol_list symbol
    (2) symbol_list -> . symbol
    (3) symbol -> . struct_decl
    (4) symbol -> . enum_decl
    (5) symbol -> . fn_decl
    (6) symbol -> . default_decl
    (7) symbol -> . impl_decl
    (8) struct_decl -> . STRUCT IDENT LBRACE field_list RBRACE
    (9) enum_decl -> . ENUM IDENT LBRACE variant_list RBRACE
    (13) fn_decl -> . FN IDENT LPAREN RPAREN RARROW IDENT LBRACE stmnt_list RBRACE
    (14) fn_decl -> . FN IDENT LPAREN RPAREN LBRACE stmnt_list RBRACE
    (15) default_decl -> . DEFAULT IDENT LBRACE RBRACE
    (16) impl_decl -> . IMPL IDENT LBRACE RBRACE

    STRUCT          shift and go to state 8
    ENUM            shift and go to state 9
    FN              shift and go to state 10
    DEFAULT         shift and go to state 11
    IMPL            shift and go to state 12

    symbol_list                    shift and go to state 1
    symbol                         shift and go to state 2
    struct_decl                    shift and go to state 3
    enum_decl                      shift and go to state 4
    fn_decl                        shift and go to state 5
    default_decl                   shift and go to state 6
    impl_decl                      shift and go to state 7

state 1

    (0) S' -> symbol_list .
    (1) symbol_list -> symbol_list . symbol
    (3) symbol -> . struct_decl
    (4) symbol -> . enum_decl
    (5) symbol -> . fn_decl
    (6) symbol -> . default_decl
    (7) symbol -> . impl_decl
    (8) struct_decl -> . STRUCT IDENT LBRACE field_list RBRACE
    (9) enum_decl -> . ENUM IDENT LBRACE variant_list RBRACE
    (13) fn_decl -> . FN IDENT LPAREN RPAREN RARROW IDENT LBRACE stmnt_list RBRACE
    (14) fn_decl -> . FN IDENT LPAREN RPAREN LBRACE stmnt_list RBRACE
    (15) default_decl -> . DEFAULT IDENT LBRACE RBRACE
    (16) impl_decl -> . IMPL IDENT LBRACE RBRACE

    STRUCT          shift and go to state 8
    ENUM            shift and go to state 9
    FN              shift and go to state 10
    DEFAULT         shift and go to state 11
    IMPL            shift and go to state 12

    symbol                         shift and go to state 13
    struct_decl                    shift and go to state 3
    enum_decl                      shift and go to state 4
    fn_decl                        shift and go to state 5
    default_decl                   shift and go to state 6
    impl_decl                      shift and go to state 7

state 2

    (2) symbol_list -> symbol .

    STRUCT          reduce using rule 2 (symbol_list -> symbol .)
    ENUM            reduce using rule 2 (symbol_list -> symbol .)
    FN              reduce using rule 2 (symbol_list -> symbol .)
    DEFAULT         reduce using rule 2 (symbol_list -> symbol .)
    IMPL            reduce using rule 2 (symbol_list -> symbol .)
    $end            reduce using rule 2 (symbol_list -> symbol .)


state 3

    (3) symbol -> struct_decl .

    STRUCT          reduce using rule 3 (symbol -> struct_decl .)
    ENUM            reduce using rule 3 (symbol -> struct_decl .)
    FN              reduce using rule 3 (symbol -> struct_decl .)
    DEFAULT         reduce using rule 3 (symbol -> struct_decl .)
    IMPL            reduce using rule 3 (symbol -> struct_decl .)
    $end            reduce using rule 3 (symbol -> struct_decl .)


state 4

    (4) symbol -> enum_decl .

    STRUCT          reduce using rule 4 (symbol -> enum_decl .)
    ENUM            reduce using rule 4 (symbol -> enum_decl .)
    FN              reduce using rule 4 (symbol -> enum_decl .)
    DEFAULT         reduce using rule 4 (symbol -> enum_decl .)
    IMPL            reduce using rule 4 (symbol -> enum_decl .)
    $end            reduce using rule 4 (symbol -> enum_decl .)


state 5

    (5) symbol -> fn_decl .

    STRUCT          reduce using rule 5 (symbol -> fn_decl .)
    ENUM            reduce using rule 5 (symbol -> fn_decl .)
    FN              reduce using rule 5 (symbol -> fn_decl .)
    DEFAULT         reduce using rule 5 (symbol -> fn_decl .)
    IMPL            reduce using rule 5 (symbol -> fn_decl .)
    $end            reduce using rule 5 (symbol -> fn_decl .)


state 6

    (6) symbol -> default_decl .

    STRUCT          reduce using rule 6 (symbol -> default_decl .)
    ENUM            reduce using rule 6 (symbol -> default_decl .)
    FN              reduce using rule 6 (symbol -> default_decl .)
    DEFAULT         reduce using rule 6 (symbol -> default_decl .)
    IMPL            reduce using rule 6 (symbol -> default_decl .)
    $end            reduce using rule 6 (symbol -> default_decl .)


state 7

    (7) symbol -> impl_decl .

    STRUCT          reduce using rule 7 (symbol -> impl_decl .)
    ENUM            reduce using rule 7 (symbol -> impl_decl .)
    FN              reduce using rule 7 (symbol -> impl_decl .)
    DEFAULT         reduce using rule 7 (symbol -> impl_decl .)
    IMPL            reduce using rule 7 (symbol -> impl_decl .)
    $end            reduce using rule 7 (symbol -> impl_decl .)


state 8

    (8) struct_decl -> STRUCT . IDENT LBRACE field_list RBRACE

    IDENT           shift and go to state 14


state 9

    (9) enum_decl -> ENUM . IDENT LBRACE variant_list RBRACE

    IDENT           shift and go to state 15


state 10

    (13) fn_decl -> FN . IDENT LPAREN RPAREN RARROW IDENT LBRACE stmnt_list RBRACE
    (14) fn_decl -> FN . IDENT LPAREN RPAREN LBRACE stmnt_list RBRACE

    IDENT           shift and go to state 16


state 11

    (15) default_decl -> DEFAULT . IDENT LBRACE RBRACE

    IDENT           shift and go to state 17


state 12

    (16) impl_decl -> IMPL . IDENT LBRACE RBRACE

    IDENT           shift and go to state 18


state 13

    (1) symbol_list -> symbol_list symbol .

    STRUCT          reduce using rule 1 (symbol_list -> symbol_list symbol .)
    ENUM            reduce using rule 1 (symbol_list -> symbol_list symbol .)
    FN              reduce using rule 1 (symbol_list -> symbol_list symbol .)
    DEFAULT         reduce using rule 1 (symbol_list -> symbol_list symbol .)
    IMPL            reduce using rule 1 (symbol_list -> symbol_list symbol .)
    $end            reduce using rule 1 (symbol_list -> symbol_list symbol .)


state 14

    (8) struct_decl -> STRUCT IDENT . LBRACE field_list RBRACE

    LBRACE          shift and go to state 19


state 15

    (9) enum_decl -> ENUM IDENT . LBRACE variant_list RBRACE

    LBRACE          shift and go to state 20


state 16

    (13) fn_decl -> FN IDENT . LPAREN RPAREN RARROW IDENT LBRACE stmnt_list RBRACE
    (14) fn_decl -> FN IDENT . LPAREN RPAREN LBRACE stmnt_list RBRACE

    LPAREN          shift and go to state 21


state 17

    (15) default_decl -> DEFAULT IDENT . LBRACE RBRACE

    LBRACE          shift and go to state 22


state 18

    (16) impl_decl -> IMPL IDENT . LBRACE RBRACE

    LBRACE          shift and go to state 23


state 19

    (8) struct_decl -> STRUCT IDENT LBRACE . field_list RBRACE
    (26) field_list -> . field_list field
    (27) field_list -> . field
    (28) field -> . IDENT COLON IDENT COMMA

    IDENT           shift and go to state 24

    field_list                     shift and go to state 25
    field                          shift and go to state 26

state 20

    (9) enum_decl -> ENUM IDENT LBRACE . variant_list RBRACE
    (10) variant_list -> . variant_list variant
    (11) variant_list -> . variant
    (12) variant -> . IDENT

    IDENT           shift and go to state 27

    variant_list                   shift and go to state 28
    variant                        shift and go to state 29

state 21

    (13) fn_decl -> FN IDENT LPAREN . RPAREN RARROW IDENT LBRACE stmnt_list RBRACE
    (14) fn_decl -> FN IDENT LPAREN . RPAREN LBRACE stmnt_list RBRACE

    RPAREN          shift and go to state 30


state 22

    (15) default_decl -> DEFAULT IDENT LBRACE . RBRACE

    RBRACE          shift and go to state 31


state 23

    (16) impl_decl -> IMPL IDENT LBRACE . RBRACE

    RBRACE          shift and go to state 32


state 24

    (28) field -> IDENT . COLON IDENT COMMA

    COLON           shift and go to state 33


state 25

    (8) struct_decl -> STRUCT IDENT LBRACE field_list . RBRACE
    (26) field_list -> field_list . field
    (28) field -> . IDENT COLON IDENT COMMA

    RBRACE          shift and go to state 34
    IDENT           shift and go to state 24

    field                          shift and go to state 35

state 26

    (27) field_list -> field .

    RBRACE          reduce using rule 27 (field_list -> field .)
    IDENT           reduce using rule 27 (field_list -> field .)


state 27

    (12) variant -> IDENT .

    RBRACE          reduce using rule 12 (variant -> IDENT .)
    IDENT           reduce using rule 12 (variant -> IDENT .)


state 28

    (9) enum_decl -> ENUM IDENT LBRACE variant_list . RBRACE
    (10) variant_list -> variant_list . variant
    (12) variant -> . IDENT

    RBRACE          shift and go to state 36
    IDENT           shift and go to state 27

    variant                        shift and go to state 37

state 29

    (11) variant_list -> variant .

    RBRACE          reduce using rule 11 (variant_list -> variant .)
    IDENT           reduce using rule 11 (variant_list -> variant .)


state 30

    (13) fn_decl -> FN IDENT LPAREN RPAREN . RARROW IDENT LBRACE stmnt_list RBRACE
    (14) fn_decl -> FN IDENT LPAREN RPAREN . LBRACE stmnt_list RBRACE

    RARROW          shift and go to state 38
    LBRACE          shift and go to state 39


state 31

    (15) default_decl -> DEFAULT IDENT LBRACE RBRACE .

    STRUCT          reduce using rule 15 (default_decl -> DEFAULT IDENT LBRACE RBRACE .)
    ENUM            reduce using rule 15 (default_decl -> DEFAULT IDENT LBRACE RBRACE .)
    FN              reduce using rule 15 (default_decl -> DEFAULT IDENT LBRACE RBRACE .)
    DEFAULT         reduce using rule 15 (default_decl -> DEFAULT IDENT LBRACE RBRACE .)
    IMPL            reduce using rule 15 (default_decl -> DEFAULT IDENT LBRACE RBRACE .)
    $end            reduce using rule 15 (default_decl -> DEFAULT IDENT LBRACE RBRACE .)


state 32

    (16) impl_decl -> IMPL IDENT LBRACE RBRACE .

    STRUCT          reduce using rule 16 (impl_decl -> IMPL IDENT LBRACE RBRACE .)
    ENUM            reduce using rule 16 (impl_decl -> IMPL IDENT LBRACE RBRACE .)
    FN              reduce using rule 16 (impl_decl -> IMPL IDENT LBRACE RBRACE .)
    DEFAULT         reduce using rule 16 (impl_decl -> IMPL IDENT LBRACE RBRACE .)
    IMPL            reduce using rule 16 (impl_decl -> IMPL IDENT LBRACE RBRACE .)
    $end            reduce using rule 16 (impl_decl -> IMPL IDENT LBRACE RBRACE .)


state 33

    (28) field -> IDENT COLON . IDENT COMMA

    IDENT           shift and go to state 40


state 34

    (8) struct_decl -> STRUCT IDENT LBRACE field_list RBRACE .

    STRUCT          reduce using rule 8 (struct_decl -> STRUCT IDENT LBRACE field_list RBRACE .)
    ENUM            reduce using rule 8 (struct_decl -> STRUCT IDENT LBRACE field_list RBRACE .)
    FN              reduce using rule 8 (struct_decl -> STRUCT IDENT LBRACE field_list RBRACE .)
    DEFAULT         reduce using rule 8 (struct_decl -> STRUCT IDENT LBRACE field_list RBRACE .)
    IMPL            reduce using rule 8 (struct_decl -> STRUCT IDENT LBRACE field_list RBRACE .)
    $end            reduce using rule 8 (struct_decl -> STRUCT IDENT LBRACE field_list RBRACE .)


state 35

    (26) field_list -> field_list field .

    RBRACE          reduce using rule 26 (field_list -> field_list field .)
    IDENT           reduce using rule 26 (field_list -> field_list field .)


state 36

    (9) enum_decl -> ENUM IDENT LBRACE variant_list RBRACE .

    STRUCT          reduce using rule 9 (enum_decl -> ENUM IDENT LBRACE variant_list RBRACE .)
    ENUM            reduce using rule 9 (enum_decl -> ENUM IDENT LBRACE variant_list RBRACE .)
    FN              reduce using rule 9 (enum_decl -> ENUM IDENT LBRACE variant_list RBRACE .)
    DEFAULT         reduce using rule 9 (enum_decl -> ENUM IDENT LBRACE variant_list RBRACE .)
    IMPL            reduce using rule 9 (enum_decl -> ENUM IDENT LBRACE variant_list RBRACE .)
    $end            reduce using rule 9 (enum_decl -> ENUM IDENT LBRACE variant_list RBRACE .)


state 37

    (10) variant_list -> variant_list variant .

    RBRACE          reduce using rule 10 (variant_list -> variant_list variant .)
    IDENT           reduce using rule 10 (variant_list -> variant_list variant .)


state 38

    (13) fn_decl -> FN IDENT LPAREN RPAREN RARROW . IDENT LBRACE stmnt_list RBRACE

    IDENT           shift and go to state 41


state 39

    (14) fn_decl -> FN IDENT LPAREN RPAREN LBRACE . stmnt_list RBRACE
    (17) stmnt_list -> . stmnt_list stmnt
    (18) stmnt_list -> . stmnt
    (19) stmnt -> . abs_expr
    (20) stmnt -> . jump_expr
    (21) abs_expr -> . literal SEMI
    (22) abs_expr -> . IDENT ASSIGN IDENT SEMI
    (23) abs_expr -> . IDENT ASSIGN literal SEMI
    (24) jump_expr -> . RETURN abs_expr SEMI
    (25) literal -> . UINT

    IDENT           shift and go to state 42
    RETURN          shift and go to state 48
    UINT            shift and go to state 49

    stmnt_list                     shift and go to state 43
    stmnt                          shift and go to state 44
    abs_expr                       shift and go to state 45
    jump_expr                      shift and go to state 46
    literal                        shift and go to state 47

state 40

    (28) field -> IDENT COLON IDENT . COMMA

    COMMA           shift and go to state 50


state 41

    (13) fn_decl -> FN IDENT LPAREN RPAREN RARROW IDENT . LBRACE stmnt_list RBRACE

    LBRACE          shift and go to state 51


state 42

    (22) abs_expr -> IDENT . ASSIGN IDENT SEMI
    (23) abs_expr -> IDENT . ASSIGN literal SEMI

    ASSIGN          shift and go to state 52


state 43

    (14) fn_decl -> FN IDENT LPAREN RPAREN LBRACE stmnt_list . RBRACE
    (17) stmnt_list -> stmnt_list . stmnt
    (19) stmnt -> . abs_expr
    (20) stmnt -> . jump_expr
    (21) abs_expr -> . literal SEMI
    (22) abs_expr -> . IDENT ASSIGN IDENT SEMI
    (23) abs_expr -> . IDENT ASSIGN literal SEMI
    (24) jump_expr -> . RETURN abs_expr SEMI
    (25) literal -> . UINT

    RBRACE          shift and go to state 53
    IDENT           shift and go to state 42
    RETURN          shift and go to state 48
    UINT            shift and go to state 49

    stmnt                          shift and go to state 54
    abs_expr                       shift and go to state 45
    jump_expr                      shift and go to state 46
    literal                        shift and go to state 47

state 44

    (18) stmnt_list -> stmnt .

    RBRACE          reduce using rule 18 (stmnt_list -> stmnt .)
    IDENT           reduce using rule 18 (stmnt_list -> stmnt .)
    RETURN          reduce using rule 18 (stmnt_list -> stmnt .)
    UINT            reduce using rule 18 (stmnt_list -> stmnt .)


state 45

    (19) stmnt -> abs_expr .

    RBRACE          reduce using rule 19 (stmnt -> abs_expr .)
    IDENT           reduce using rule 19 (stmnt -> abs_expr .)
    RETURN          reduce using rule 19 (stmnt -> abs_expr .)
    UINT            reduce using rule 19 (stmnt -> abs_expr .)


state 46

    (20) stmnt -> jump_expr .

    RBRACE          reduce using rule 20 (stmnt -> jump_expr .)
    IDENT           reduce using rule 20 (stmnt -> jump_expr .)
    RETURN          reduce using rule 20 (stmnt -> jump_expr .)
    UINT            reduce using rule 20 (stmnt -> jump_expr .)


state 47

    (21) abs_expr -> literal . SEMI

    SEMI            shift and go to state 55


state 48

    (24) jump_expr -> RETURN . abs_expr SEMI
    (21) abs_expr -> . literal SEMI
    (22) abs_expr -> . IDENT ASSIGN IDENT SEMI
    (23) abs_expr -> . IDENT ASSIGN literal SEMI
    (25) literal -> . UINT

    IDENT           shift and go to state 42
    UINT            shift and go to state 49

    abs_expr                       shift and go to state 56
    literal                        shift and go to state 47

state 49

    (25) literal -> UINT .

    SEMI            reduce using rule 25 (literal -> UINT .)


state 50

    (28) field -> IDENT COLON IDENT COMMA .

    RBRACE          reduce using rule 28 (field -> IDENT COLON IDENT COMMA .)
    IDENT           reduce using rule 28 (field -> IDENT COLON IDENT COMMA .)


state 51

    (13) fn_decl -> FN IDENT LPAREN RPAREN RARROW IDENT LBRACE . stmnt_list RBRACE
    (17) stmnt_list -> . stmnt_list stmnt
    (18) stmnt_list -> . stmnt
    (19) stmnt -> . abs_expr
    (20) stmnt -> . jump_expr
    (21) abs_expr -> . literal SEMI
    (22) abs_expr -> . IDENT ASSIGN IDENT SEMI
    (23) abs_expr -> . IDENT ASSIGN literal SEMI
    (24) jump_expr -> . RETURN abs_expr SEMI
    (25) literal -> . UINT

    IDENT           shift and go to state 42
    RETURN          shift and go to state 48
    UINT            shift and go to state 49

    stmnt_list                     shift and go to state 57
    stmnt                          shift and go to state 44
    abs_expr                       shift and go to state 45
    jump_expr                      shift and go to state 46
    literal                        shift and go to state 47

state 52

    (22) abs_expr -> IDENT ASSIGN . IDENT SEMI
    (23) abs_expr -> IDENT ASSIGN . literal SEMI
    (25) literal -> . UINT

    IDENT           shift and go to state 58
    UINT            shift and go to state 49

    literal                        shift and go to state 59

state 53

    (14) fn_decl -> FN IDENT LPAREN RPAREN LBRACE stmnt_list RBRACE .

    STRUCT          reduce using rule 14 (fn_decl -> FN IDENT LPAREN RPAREN LBRACE stmnt_list RBRACE .)
    ENUM            reduce using rule 14 (fn_decl -> FN IDENT LPAREN RPAREN LBRACE stmnt_list RBRACE .)
    FN              reduce using rule 14 (fn_decl -> FN IDENT LPAREN RPAREN LBRACE stmnt_list RBRACE .)
    DEFAULT         reduce using rule 14 (fn_decl -> FN IDENT LPAREN RPAREN LBRACE stmnt_list RBRACE .)
    IMPL            reduce using rule 14 (fn_decl -> FN IDENT LPAREN RPAREN LBRACE stmnt_list RBRACE .)
    $end            reduce using rule 14 (fn_decl -> FN IDENT LPAREN RPAREN LBRACE stmnt_list RBRACE .)


state 54

    (17) stmnt_list -> stmnt_list stmnt .

    RBRACE          reduce using rule 17 (stmnt_list -> stmnt_list stmnt .)
    IDENT           reduce using rule 17 (stmnt_list -> stmnt_list stmnt .)
    RETURN          reduce using rule 17 (stmnt_list -> stmnt_list stmnt .)
    UINT            reduce using rule 17 (stmnt_list -> stmnt_list stmnt .)


state 55

    (21) abs_expr -> literal SEMI .

    RBRACE          reduce using rule 21 (abs_expr -> literal SEMI .)
    IDENT           reduce using rule 21 (abs_expr -> literal SEMI .)
    RETURN          reduce using rule 21 (abs_expr -> literal SEMI .)
    UINT            reduce using rule 21 (abs_expr -> literal SEMI .)
    SEMI            reduce using rule 21 (abs_expr -> literal SEMI .)


state 56

    (24) jump_expr -> RETURN abs_expr . SEMI

    SEMI            shift and go to state 60


state 57

    (13) fn_decl -> FN IDENT LPAREN RPAREN RARROW IDENT LBRACE stmnt_list . RBRACE
    (17) stmnt_list -> stmnt_list . stmnt
    (19) stmnt -> . abs_expr
    (20) stmnt -> . jump_expr
    (21) abs_expr -> . literal SEMI
    (22) abs_expr -> . IDENT ASSIGN IDENT SEMI
    (23) abs_expr -> . IDENT ASSIGN literal SEMI
    (24) jump_expr -> . RETURN abs_expr SEMI
    (25) literal -> . UINT

    RBRACE          shift and go to state 61
    IDENT           shift and go to state 42
    RETURN          shift and go to state 48
    UINT            shift and go to state 49

    stmnt                          shift and go to state 54
    abs_expr                       shift and go to state 45
    jump_expr                      shift and go to state 46
    literal                        shift and go to state 47

state 58

    (22) abs_expr -> IDENT ASSIGN IDENT . SEMI

    SEMI            shift and go to state 62


state 59

    (23) abs_expr -> IDENT ASSIGN literal . SEMI

    SEMI            shift and go to state 63


state 60

    (24) jump_expr -> RETURN abs_expr SEMI .

    RBRACE          reduce using rule 24 (jump_expr -> RETURN abs_expr SEMI .)
    IDENT           reduce using rule 24 (jump_expr -> RETURN abs_expr SEMI .)
    RETURN          reduce using rule 24 (jump_expr -> RETURN abs_expr SEMI .)
    UINT            reduce using rule 24 (jump_expr -> RETURN abs_expr SEMI .)


state 61

    (13) fn_decl -> FN IDENT LPAREN RPAREN RARROW IDENT LBRACE stmnt_list RBRACE .

    STRUCT          reduce using rule 13 (fn_decl -> FN IDENT LPAREN RPAREN RARROW IDENT LBRACE stmnt_list RBRACE .)
    ENUM            reduce using rule 13 (fn_decl -> FN IDENT LPAREN RPAREN RARROW IDENT LBRACE stmnt_list RBRACE .)
    FN              reduce using rule 13 (fn_decl -> FN IDENT LPAREN RPAREN RARROW IDENT LBRACE stmnt_list RBRACE .)
    DEFAULT         reduce using rule 13 (fn_decl -> FN IDENT LPAREN RPAREN RARROW IDENT LBRACE stmnt_list RBRACE .)
    IMPL            reduce using rule 13 (fn_decl -> FN IDENT LPAREN RPAREN RARROW IDENT LBRACE stmnt_list RBRACE .)
    $end            reduce using rule 13 (fn_decl -> FN IDENT LPAREN RPAREN RARROW IDENT LBRACE stmnt_list RBRACE .)


state 62

    (22) abs_expr -> IDENT ASSIGN IDENT SEMI .

    RBRACE          reduce using rule 22 (abs_expr -> IDENT ASSIGN IDENT SEMI .)
    IDENT           reduce using rule 22 (abs_expr -> IDENT ASSIGN IDENT SEMI .)
    RETURN          reduce using rule 22 (abs_expr -> IDENT ASSIGN IDENT SEMI .)
    UINT            reduce using rule 22 (abs_expr -> IDENT ASSIGN IDENT SEMI .)
    SEMI            reduce using rule 22 (abs_expr -> IDENT ASSIGN IDENT SEMI .)


state 63

    (23) abs_expr -> IDENT ASSIGN literal SEMI .

    RBRACE          reduce using rule 23 (abs_expr -> IDENT ASSIGN literal SEMI .)
    IDENT           reduce using rule 23 (abs_expr -> IDENT ASSIGN literal SEMI .)
    RETURN          reduce using rule 23 (abs_expr -> IDENT ASSIGN literal SEMI .)
    UINT            reduce using rule 23 (abs_expr -> IDENT ASSIGN literal SEMI .)
    SEMI            reduce using rule 23 (abs_expr -> IDENT ASSIGN literal SEMI .)

